--- a/connexion.css
+++ b/connexion.css
@@ -188,6 +188,7 @@ strong:hover {
 
 #legaletliens a {
     text-decoration: none;
+    color: black;
 }
 
 #logodevpng {
@@ -207,4 +208,53 @@ footer {
 #txtfooter  {
     display: flex;
     flex-direction: row;
+}
+
+#register {
+    display: flex;
+    flex-direction: column;
+    width: 50em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#checkbox{
+    display: flex;
+    flex-direction: row;
+}
+
+#description {
+    min-height: 10em;
+}
+
+textarea {
+    resize: none;
+    border: 2px solid rgb(161, 0, 161);
+    border-radius: 4px;
+    color: rgb(161, 0, 161);
+    font-family: 'Poppins', sans-serif;
+    font-size: 15pt;
+  }
+
+input {  
+  border: 2px solid rgb(161, 0, 161);
+  border-radius: 4px;
+  font-size: 15pt;
+  color: rgb(161, 0, 161)
+}
+
+label {
+    color: rgb(255, 212, 72)
+}
+
+::placeholder {
+    color: rgb(161, 0, 161)
+}
+
+#changepass {
+    display: flex;
+    flex-direction: column;
+    width: 50em;
+    margin-left: auto;
+    margin-right: auto;
 }
